tests/lime/fail/tokens/macro_rest/byte_255.wsa
macro mÿ [push 255] mÿ
